--- a/backend/package.json
+++ b/backend/package.json
@@ -9,19 +9,24 @@
     "dev": "nodemon src/server.js",
     "migrate": "node src/config/migrate.js"
   },
-  "keywords": ["status-monitor", "api-monitoring", "uptime"],
+  "keywords": [
+    "status-monitor",
+    "api-monitoring",
+    "uptime"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "pg": "^8.11.3",
-    "node-cron": "^3.0.3",
     "bcrypt": "^5.1.1",
-    "jsonwebtoken": "^9.0.2",
-    "dotenv": "^16.3.1",
     "cors": "^2.8.5",
-    "winston": "^3.11.0",
-    "nodemailer": "^6.9.7"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
+    "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.7",
+    "pg": "^8.11.3",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
