Updated ReadMe to show product images

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,8 +1,9 @@
-# Database
-DATABASE_URL=postgresql://postgres:password@localhost:5432/status_monitor
+# Database Configuration
+DATABASE_URL=postgresql://postgres:YOUR_PASSWORD_HERE@localhost:5432/status_monitor
 
-# Authentication
-JWT_SECRET=your-super-secret-jwt-key-change-in-production
+# JWT Authentication
+# IMPORTANT: Generate a strong secret using: openssl rand -base64 32
+JWT_SECRET=CHANGE_THIS_TO_A_STRONG_RANDOM_SECRET
 JWT_EXPIRY=7d
 
 # Server
