--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "status-monitor-backend",
-  "version": "1.0.0",
-  "description": "Backend API for Status Monitor application",
+  "name": "pabbly-status-monitor-backend",
+  "version": "1.1.0",
+  "description": "Backend API for Pabbly Status Monitor application",
   "main": "src/server.js",
   "type": "module",
   "scripts": {
